Bug 1818391 - Clamp parallel marking utilization telemetry value r=sfink

I don't know how this is generating a value that is outside these limits, but
we can sometimes get inconsistent timestamps so maybe that is happening. The
simplest thing to do is clamp the value to sensible limits.

Differential Revision: https://phabricator.services.mozilla.com/D173173